# djx-cli

./: .gitignore  LICENSE  README.md  TESTING.md  pyproject.toml  setup.py
djx/: cli.py  config.py  utils.py
djx/commands/: destroy.py  new.py  routes.py
djx/generators/: controller.py  migration.py  model.py  scaffold.py  urls.py
