[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djx"
version = "0.1.0"
description = "Convention over configuration for Django - Rails-like scaffolding and generators"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Redson Ngwira"}
]
dependencies = [
    "Django>=4.2,<6.0",
    "click>=8.0",
]

[project.scripts]
djx = "djx.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["djx*"]
